# junzheng

./: CMakeLists.txt  R.h  README.md  main.cc  page_home.cc  page_home.h
assets/color/: text_white.xml
assets/drawable/: bar.xml  border_bottom.xml  border_bottom_colorful.xml  button_background.xml  card_background.xml  click_backgroud.xml  frameline_toast_bg_0.xml  ic_wifi_0.xml  ic_wifi_1.xml  ic_wifi_2.xml  ic_wifi_3.xml  ic_wifi_4.xml  input_background.xml  selector_img_4g_level.xml  selector_img_wifi_level.xml  selector_menu_05.xml  selector_menu_06.xml  selector_menu_07.xml  selector_menu_08.xml  switch_off_track.xml  switch_off_track_42.xml  switch_off_track_60.xml  switch_on_track_42.xml  switch_on_track_60.xml  switch_thumb.xml  switch_thumb_42.xml  switch_track.xml  switch_track_42.xml  switch_track_60.xml
assets/layout/: mode_setting_tabbar.xml  page_changjing.xml  page_home.xml  page_home_1.xml  page_home_2.xml  page_jiaju.xml  page_mail.xml  page_setting.xml  toast_layout.xml  toast_layout_495_235.xml
assets/values/: ID.xml  colors.xml  style.xml
src/comm/: comm_func.cc  comm_func.h  common.h
src/libs/: verticalViewPager.cc  verticalViewPager.h
src/window/: page_changjing.cc  page_changjing.h  page_home.cc  page_home.h  page_jiaju.cc  page_jiaju.h  page_mail.cc  page_mail.h  page_setting.cc  page_setting.h  wind.h
